@@ -1,5 +1,13 @@
 2011-05-11  Ivan Maidanski  <ivmai@mail.ru>
 
+	* pthread_support.c (GC_check_tls): Fix "#endif" comment.
+	* include/gc.h (GC_REDIRECT_TO_LOCAL): Remove deprecated comment.
+	* include/private/thread_local_alloc.h (THREAD_LOCAL_ALLOC):
+	Remove redundant test of the macro.
+	* include/private/thread_local_alloc.h: Reformat the code.
+
+2011-05-11  Ivan Maidanski  <ivmai@mail.ru>
+
 	* backgraph.c (add_edge): Recognize DEBUG_PRINT_BIG_N_EDGES macro.
 	* os_dep.c (GC_set_and_save_fault_handler): Recognize
 	SIGACTION_FLAGS_NODEFER_HACK macro.
